using css3 by transit plugin

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>jQuery Text Animation - jQuery Plugins - sideroad</title>
         <script type="text/javascript" src="lib/jquery.min.js"></script>
         <script type="text/javascript" src="lib/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="lib/jquery.transit.min.js"></script>
         <script type="text/javascript" src="src/jquery.textanimation.js"></script>
         
     </head>
@@ -40,7 +41,7 @@ $(document.body).ready(function(){
 		minsize: 20,
 		magnification: 30,
 		fixed: "top",
-		delay: 5,
+		delay: 15,
 		stuff: 1.5
 	});
     $("div#demo_step1").textAnimation({
